# Tablet-VINSA-1060-Plus-Linux-Driver

./: README.md
driver/: Cargo.toml
driver/launcher/: VINSA 1060 Plus Settings.desktop
driver/src/: config.rs  main.rs  physical_device.rs  virtual_device.rs
