[package]
name = "v1060p-driver"
version = "2.0.0"
edition = "2024"

[dependencies]
evdev = "0.12.1"
rusb = "0.9.3"
signal-hook = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
eframe = "0.29"
rand = "0.9.2"

[profile.release]
strip = true
lto = true
panic = "abort"
